--- a/package.json
+++ b/package.json
@@ -17,10 +17,22 @@
   },
   "homepage": "https://github.com/makt-k/makt-k.github.io",
   "devDependencies": {
+    "babel-preset-es2015": "^6.5.0",
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
+    "fs": "0.0.2",
     "gulp": "^3.9.0",
     "gulp-connect": "^2.3.1",
     "gulp-livereload": "^3.8.1",
     "gulp-sass": "^2.1.1",
     "underscore": "^1.8.3"
+  },
+  "dependencies": {
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.2.0",
+    "reach": "^1.0.0",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-router": "^2.0.0"
   }
 }
